fix: update editor block paddings (#195)
* fix: remove padding around social links

* fix: email template button and quote styles

* fix: editor block paddings

* fix: post inserter preview in editor

* fix: layout modal preview

* fix: layout modal max-width

* fix: layout sidebar posts-inserter

* fix: button misalignment

* fix: simplify buttons block

--- a/src/components/template-modal/style.scss
+++ b/src/components/template-modal/style.scss
@@ -196,7 +196,19 @@
 
 					.newspack-newsletters-layouts__item-preview {
 						border-color: currentColor;
-						box-shadow: inset 0 0 0 1px;
+						position: relative;
+
+						&::before {
+							border: 1px solid;
+							bottom: 0;
+							content: '';
+							display: block;
+							left: 0;
+							position: absolute;
+							right: 0;
+							top: 0;
+							z-index: 1;
+						}
 					}
 				}
 			}
@@ -213,11 +225,6 @@
 				.block-editor-block-preview__container {
 					position: absolute;
 					top: 0;
-
-					.block-editor-block-list__layout.is-root-container {
-						padding-left: 28px;
-						padding-right: 28px;
-					}
 				}
 			}
 
@@ -246,7 +253,7 @@
 			&__container {
 				align-self: flex-start;
 				margin: 0 auto;
-				max-width: 560px;
+				max-width: 600px;
 			}
 		}
 	}
@@ -254,6 +261,10 @@
 
 // Posts Inserter - Preview
 .block-editor-block-preview__container {
+	.wp-block[data-type='newspack-newsletters/posts-inserter'] {
+		padding: 0;
+	}
+
 	.newspack-posts-inserter {
 		border: 0;
 		padding: 0;
@@ -269,22 +280,17 @@
 		}
 
 		.block-editor-block-preview__container {
+			height: 100% !important;
 			max-height: 100%;
-			min-height: 0;
 
-			.block-editor-block-list__layout.is-root-container {
-				padding-left: 0;
-				padding-right: 0;
+			.newspack-newsletters-modal__layouts & {
+				position: relative;
 			}
+		}
 
-			.components-disabled {
-				margin-bottom: 40px;
-				margin-top: -40px;
-			}
-
-			.wp-block-columns + .wp-block-columns {
-				margin-top: 40px;
-			}
+		.block-editor-block-preview__content {
+			transform: scale( 1 ) !important;
+			width: 600px !important;
 		}
 	}
 }
